# Consol3

./: .clang-format  .gitignore  CMakeLists.txt  Consol3.sln  Consol3.vcxproj  README.md
Consol3/: AbstractFrameBufferRenderer.hpp  AbstractMesh.cpp  AbstractMesh.hpp  AbstractRasterizer.hpp  Angle.cpp  Angle.hpp  BarycentricRasterizer.cpp  BarycentricRasterizer.hpp  Camera.cpp  Camera.hpp  Color.hpp  Consol3.cpp  Consol3.vcxproj  Consol3.vcxproj.filters  ConsoleBuffer.cpp  ConsoleBuffer.hpp  DefaultConsoleFrameBufferRenderer.cpp  DefaultConsoleFrameBufferRenderer.hpp  FrameBuffer.cpp  FrameBuffer.hpp  GreyscaleFrameBufferRenderer.cpp  IFrameBuffer.hpp  IFrameBufferRenderer.hpp  MathUtil.hpp  Matrix4.cpp  Matrix4.hpp  Model.cpp  Model.hpp  Quaternion.cpp  Quaternion.hpp  StaticMesh.hpp  Transform.cpp  Transform.hpp  Vector2.cpp  Vector2.hpp  Vector2D.cpp  Vector2D.hpp  Vector3.cpp  Vector3.hpp  Vector3D.cpp  (+5 more)
res/: alien.md2  bird.md2  buggy.md2  centaur.md2  marvin.md2  penguin.md2  raptor.md2  scarlet.md2  warrior.md2
src/: Consol3.cpp
src/Display/: ANSIRenderer.cpp  ANSIRenderer.hpp  AbstractFrameBuffer.hpp  AbstractFrameBufferRenderer.hpp  Color.hpp  ColorMapping.hpp  ConsoleManager.cpp  ConsoleManager.hpp  DitheredFrameBuffer.cpp  DitheredFrameBuffer.hpp  DitheredFrameBufferRenderer.cpp  DitheredFrameBufferRenderer.hpp  DitheredFrameDrawer.cpp  DitheredFrameDrawer.hpp  DitheredGreyscaleFrameDrawer.cpp  DitheredGreyscaleFrameDrawer.hpp  DitheredGreyscaleRenderer.cpp  DitheredGreyscaleRenderer.hpp  DitheredPixelTranslator.cpp  DitheredPixelTranslator.hpp  DitheredRenderer.cpp  DitheredRenderer.hpp  FrameBuffer.cpp  FrameBuffer.hpp  GreyscaleFrameBuffer.cpp  GreyscaleFrameBuffer.hpp  GreyscaleFrameBufferRenderer.cpp  GreyscaleFrameBufferRenderer.hpp  GreyscaleFrameDrawer.cpp  GreyscaleFrameDrawer.hpp  GreyscalePixelTranslator.cpp  GreyscalePixelTranslator.hpp  GreyscaleRenderer.cpp  GreyscaleRenderer.hpp  HSVColor.hpp  IFrameDrawer.hpp  IPixelTranslator.hpp  IRenderer.hpp  ITerminalManager.hpp  NullFrameDrawer.hpp  (+17 more)
src/Display/Linux/: LinuxTerminalManager.cpp  LinuxTerminalManager.hpp
src/Display/Mac/: MacTerminalManager.cpp  MacTerminalManager.hpp
src/Display/Multiplatform/: TextOnlyFrameDrawer.cpp  TextOnlyFrameDrawer.hpp  VT24BitFrameDrawer.cpp  VT24BitFrameDrawer.hpp  VT8BitFrameDrawer.cpp  VT8BitFrameDrawer.hpp
src/Display/Windows/: DitheredFrameDrawer.cpp  DitheredFrameDrawer.hpp  DitheredGreyscaleFrameDrawer.cpp  DitheredGreyscaleFrameDrawer.hpp  GreyscaleFrameDrawer.cpp  GreyscaleFrameDrawer.hpp  WindowsStructsForLinux.hpp  WindowsTerminalManager.cpp  WindowsTerminalManager.hpp
src/Engine/: Consol3Engine.cpp  Consol3Engine.hpp  Engine.cpp  Engine.hpp  VoxelElements.hpp  VoxelGrid.hpp  VoxelTypes.hpp
src/Engine/Input/: IInputManager.hpp  LinuxInputManager.cpp  LinuxInputManager.hpp  MacInputManager.cpp  MacInputManager.hpp  WindowsInputManager.cpp  WindowsInputManager.hpp
src/Engine/Math/: Angle.cpp  Matrix4.hpp  Point2.hpp  Quaternion.cpp  Quaternion.hpp  Vector2.cpp  Vector2.hpp  Vector3.cpp  Vector3.hpp
src/Engine/Math/Util/: MathUtil.hpp
src/Engine/Rendering/: AbstractMesh.cpp  AbstractMesh.hpp  AbstractRasterizer.hpp  AnimatedMesh.cpp  AnimatedMesh.hpp  AnimatedModel.cpp  AnimatedModel.hpp  Animation.h  BarycentricRasterizer.cpp  BarycentricRasterizer.hpp  Camera.cpp  Camera.hpp  Clipper.cpp  Clipper.hpp  DepthBuffer.cpp  DepthBuffer.hpp  Model.cpp  Model.hpp  RasterSceneRenderer.cpp  RasterSceneRenderer.hpp  Rasterizer.cpp  Rasterizer.hpp  RayMarcher.cpp  RayMarcher.hpp  SceneRenderer.cpp  SceneRenderer.hpp  Shaders.hpp  StaticMesh.cpp  StaticMesh.hpp  StaticModel.cpp  StaticModel.hpp  Texture.cpp  Texture.hpp  TextureConstants.hpp  Transform.cpp  Transform.hpp  Triangle.hpp  Vertex.cpp  Vertex.hpp  VertexBuffer.cpp  (+4 more)
src/Engine/Rendering/Lighting/: DirectionalLight.cpp  DirectionalLight.hpp  ILight.hpp  LightRenderer.hpp  LightingSystem.cpp  LightingSystem.hpp  MaterialProperties.hpp  PointLight.cpp  PointLight.hpp  SpotLight.cpp  SpotLight.hpp
src/Engine/Rendering/Resources/: ResourceManager.hpp
src/Engine/Rendering/Shaders/: AbstractShader.cpp  AbstractShader.hpp  DepthMapShader.cpp  DepthMapShader.hpp  IShader.hpp  PlainColorShader.cpp  PlainColorShader.hpp  PlainShader.cpp  PlainShader.hpp  PlainTextureShader.cpp  PlainTextureShader.hpp  ShadedColorShader.cpp  ShadedColorShader.hpp  ShadedShader.cpp  ShadedShader.hpp  ShadedTextureShader.cpp  ShadedTextureShader.hpp  ShaderStore.hpp
src/Engine/Resources/: BmpTextureLoader.cpp  BmpTextureLoader.hpp  IModelLoader.hpp  ITextureLoader.hpp  Md2ModelLoader.cpp  Md2ModelLoader.hpp  Md2Normals.hpp  ModelGenerator.cpp  ModelGenerator.hpp  NoiseGenerator.hpp  ObjModelLoader.cpp  ObjModelLoader.hpp  ResourceManager.cpp  ResourceManager.hpp
src/Engine/Resources/Util/: FileUtils.hpp
src/Game/: Consol3Game.cpp  Consol3Game.hpp  IGame.hpp  ModelGenerator.cpp  ModelGenerator.hpp  MouseInput.cpp  MouseInput.hpp  NoiseGenerator.hpp  RasterGame.cpp  RasterGame.hpp  VoxelGame.cpp  VoxelGame.hpp  VoxelTypes.hpp
src/Game/Dual/: DualGame.cpp  DualGame.hpp
src/Game/Raster/: ModelGenerator.cpp  ModelGenerator.hpp  NoiseGenerator.hpp  RasterGame.cpp  RasterGame.hpp
src/Game/Voxel/: VoxelGame.cpp  VoxelGame.hpp  VoxelSimulation.cpp  VoxelSimulation.hpp  VoxelUtil.hpp
src/Math/: Angle.cpp  Angle.hpp  Matrix4.cpp  Matrix4.hpp  Point2.hpp  Quaternion.cpp  Quaternion.hpp  Ray.hpp  SIMDMatrix4.hpp  Vector2.cpp  Vector2.hpp  Vector2I.hpp  Vector3.cpp  Vector3.hpp  Vector3I.hpp  Vector3i.hpp
src/Math/Util/: MathUtil.hpp
tools/: README.md  color_map_generator.py  dithered_color_map  vt8bit_color_map
